# vinland

./: .gitignore  Cargo.toml  README.md  notas.txt
src/: main.rs  state.rs
